<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/cardview_new_pub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="@dimen/cardview_default_elevation"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:cardPreventCornerOverlap="false">
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
                <ImageView
                    android:id="@+id/image_new_pub"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_add_photo"
                    android:layout_height="250dp" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_name_new_pub"
                    android:paddingTop="@dimen/layout_object">
                    <EditText
                        android:id="@+id/name_new_pub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/tvTitleTypePublication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_type_publication"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="@dimen/layout_object"
                    android:padding="@dimen/layout_object"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_new_pub"
                        android:spinnerMode="dialog"
                        android:prompt="@string/title_sp_type_publication"
                        android:entries="@array/type_publication"
                        android:text="[Selecciona un tipo...]"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_datePicker_new_pub"
                    android:paddingTop="@dimen/layout_object">
                    <EditText
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:ems="10"
                        android:padding="10dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_description"
                    android:paddingTop="@dimen/layout_object">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description_new_pub"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:scrollbars="vertical" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="fill_horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvTitlePoblation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_poblacion_new_pub"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/layout_object"
                            android:layout_marginBottom="@dimen/layout_object"
                            android:padding="@dimen/layout_object"/>
                        <CheckBox
                            android:id="@+id/checkboxM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_object"
                            android:text="@string/men"
                            android:padding="@dimen/layout_object"/>
                        <CheckBox
                            android:id="@+id/checkboxF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/women"
                            android:padding="@dimen/layout_object"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layout_cupos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/layout_object"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/np_right_margin"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tvTitleCupos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_cupos_new_pub"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="@dimen/cardview_compat_inset_shadow"
                            android:padding="@dimen/layout_object"/>
                        <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/numberPicker"
                            android:layout_margin="@dimen/layout_object"
                            android:layout_marginRight="@dimen/np_right_margin"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvTitleSubCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_subcategory"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/layout_object"/>
                    <ListView
                        android:id="@+id/list_subcat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/layout_object" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>