<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codigoj.lici.DetailPublicationFragmentCoupons"
    tools:showIn="@layout/activity_detail_publication">-->
    
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin"
        android:padding="@dimen/paddingLeftRight_icon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_name_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/not_registrer"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/tvQuantityCoupons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/not_registrer_count_coupons"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btn_reserved_coupons"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/btn_login"
                android:paddingLeft="@dimen/layout_object"
                android:paddingRight="@dimen/layout_object"
                android:text="@string/not_registrer_reserved_coupons"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_redeemed_coupons"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/layout_margin"
                android:background="@drawable/btn_login"
                android:paddingLeft="@dimen/layout_object"
                android:paddingRight="@dimen/layout_object"
                android:text="@string/not_registrer_redeemed_coupons"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>
    </FrameLayout>


<!--</android.support.constraint.ConstraintLayout>-->
