<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codigoj.lici.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2be4dfdf">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:id="@+id/imageView"
                android:background="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/title_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTop_title_login"
                android:paddingBottom="@dimen/paddingTop_cardview_pub"
                android:textSize="28dp"
                android:gravity="center_horizontal"
                android:text="@string/title_log_in"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/paddingLeftRight_button"
                android:paddingLeft="@dimen/paddingLeftRight_button"
                android:textAllCaps="false"
                android:textSize="@dimen/textSize_Button"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_in"
                android:background="@drawable/btn_login"
                android:layout_marginTop="@dimen/layout_marginTop_button_form"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
