<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.codigoj.settings.ProfileActivity">

            <LinearLayout
                android:id="@+id/view_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/myprofile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_left_image"
                    android:layout_marginRight="@dimen/margin_right_image"
                    android:layout_marginTop="@dimen/title_margin_top"
                    android:text="Mi perfil"
                    android:textSize="@dimen/font_title_size" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/photo_button"
                    android:layout_width="270dp"
                    android:layout_height="270dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/margin_left_image"
                    android:layout_marginRight="@dimen/margin_right_image"
                    android:layout_marginTop="@dimen/margin_bottom_top_image"
                    android:src="@drawable/profile_image"
                    app:civ_border_width="0dp"
                    app:civ_border_color="#FF000000"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/company_description"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/prioridad_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/edit_text_padding"
                    android:text="@string/company_category"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:entries="@array/pref_category_profile_company_titles"
                    android:layout_gravity="center"/>

                <Button android:id="@+id/btn_direction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_bottom_top_image"
                    android:text="@string/company_locate_name"
                    android:paddingRight="16dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/btn_locate"
                    android:textColor="?attr/editTextColor"
                    android:textAllCaps="false"
                    android:spinnerMode="dialog"
                    android:onClick="onLocate"
                    android:textSize="18sp"
                    android:drawableRight="@drawable/ic_locate"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:gravity="center_vertical" />
                <Button
                    android:id="@+id/btn_save_profile_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/paddingLeftRight_button"
                    android:paddingLeft="@dimen/paddingLeftRight_button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize_Button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_bottom_top_image"
                    android:text="@string/company_save_profile_info"
                    android:background="@drawable/btn_login"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>